--- a/src/index.html
+++ b/src/index.html
@@ -44,15 +44,17 @@
     
       const form = document.querySelector('form');
       const ul = document.querySelector('ul');
+      const liVar = ul.querySelector('li');
 
       form.onsubmit = function(event){
         event.preventDefault();
 
         const input = form.querySelector('input');
         const value = input.value;
-
+        
         if(value == '') return
-        const li = ul.querySelector('li').cloneNode(true);
+        //const li = ul.querySelector('li').cloneNode(true);
+        const li = liVar.cloneNode(true);
         li.querySelector('span').textContent = value;
         ul.appendChild(li);
         input.value = ''
